---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/constructor/return_value.lox
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
